--- a/magatron-site/package.json
+++ b/magatron-site/package.json
@@ -11,7 +11,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "framer-motion": "^11.0.0",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
